# cvplus

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
cvplus/: _version.py  cv2keycode.py  cvt.py  display.py  draw.py  shape.py
cvplus/cli/: imgconv.py
cvplus/gui/: camera_capture.py  color_range_selector.py  crop_affin.py
cvplus/utils/: color_range.py  image_files.py
doc/: cli_img_conv.md  gui_camera_capture.md  gui_color_range_selector.md  lib_cvt.md  lib_display.md  lib_draw.md  lib_shape.md
