[tool.poetry]
name = "cvplus"
version = "0.1.4"
description = "CV Tools"
authors = ["Daiju Watanabe <11362284+daizyu@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"
numpy = "^1.22.3"
tqdm = "^4.64.0"
Pillow = "^9.1.0"
Shapely = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
