[metadata]
name = cvplus
version = 0.1.0
author = Daiju Watanabe 
author_email = 11362284+daizyu@users.noreply.github.com
description = CV Tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daizyu/cvplus
project_urls =
    Bug Tracker = https://github.com/daizyu/cvplus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src